# proof-of-reserves-v2

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT.md  README.md  cliff.toml  run.sh  rust-toolchain.toml  rustfmt.toml  tarpaulin-report.html
.github/workflows/: rust.yml
config/: default.toml  local.toml
crates/zk-por-api/: Cargo.toml
crates/zk-por-cli/: Cargo.toml
crates/zk-por-cli/src/: checker.rs  constant.rs  lib.rs  main.rs  merkle_proof.rs  prover.rs  verifier.rs
crates/zk-por-core/: Cargo.toml  build.rs
crates/zk-por-core/benches/: batch_circuit.rs  benchmark.rs  merkle_sum_tree.rs  rangecheck_lut.rs  recursive_circuit.rs
crates/zk-por-core/src/: account.rs  circuit_config.rs  circuit_utils.rs  config.rs  database.rs  e2e.rs  error.rs  global.rs  lib.rs  main.rs  merkle_proof.rs  merkle_sum_tree.rs  parser.rs  types.rs  util.rs
crates/zk-por-core/src/circuit_registry/: mod.rs  precompiled_registry.rs  registry.rs
crates/zk-por-core/src/circuits/: account_circuit.rs  circuit_utils.rs  merkle_sum_circuit.rs  mod.rs
crates/zk-por-core/src/core/: account.rs  mod.rs  parser.rs
crates/zk-por-core/src/gadgets/: mod.rs  rangecheck.rs
crates/zk-por-core/src/merkle_proof_prover/: merkle_proof.rs  merkle_proof_circuits.rs  mod.rs  prover.rs
crates/zk-por-core/src/merkle_sum_prover/: merkle_sum_tree.rs  mod.rs  prover.rs  utils.rs
crates/zk-por-core/src/merkle_sum_prover/circuits/: account_circuit.rs  circuit_utils.rs  merkle_sum_circuit.rs  mod.rs
crates/zk-por-core/src/recursive/: circuit.rs  mod.rs  prove.rs  prover.rs  recursive_circuit.rs  recursive_circuit_utils.rs  tests.rs  vd.rs
crates/zk-por-core/src/recursive_prover/: mod.rs  prover.rs  recursive_circuit.rs
crates/zk-por-core/static/: vd_map  vd_map_batch_size_2_asset_count_2_recursive_depth_10.json
crates/zk-por-core/tests/: batch_circuit.rs  e2e.rs  recursive_circuit.rs  registry.rs
crates/zk-por-db/: Cargo.toml
crates/zk-por-db/src/: lib.rs  main.rs
crates/zk-por-tracing/: Cargo.toml
crates/zk-por-tracing/src/: lib.rs
crates/zk-por-tracing/src/opentelemetry/exporter/: stdout.rs
doc/: perf.md  solution.md
docker/: Dockerfile
docs/: bench.md  dev.md  release.md  serialization.md  technical_spec.md
my_permanent_leveldb/: LOG
scripts/: gen_svg.sh  gen_test_data.py  release.sh  release_linux.sh  release_mac_arm.sh
scripts/release/prover/: aarch64-apple-darwin.sh  common.sh  x86_64-unknown-linux-gnu-avx2.sh  x86_64-unknown-linux-gnu-avx512.sh  x86_64-unknown-linux-gnu.sh
scripts/release/verifier/: aarch64-apple-darwin.sh  common.sh  x86_64-apple-darwin.sh  x86_64-pc-windows-gnu.sh  x86_64-unknown-linux-gnu.sh
src/: lib.rs
test-data/: batch0.json
