[workspace]
members = [
    "crates/zk-por-core",
    "crates/zk-por-cli",
    "crates/zk-por-db",
    "crates/zk-por-tracing"
]
resolver = "2"

[workspace.package]
version="0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/okx/proof-of-reserves-v2.git"
repository = "https://github.com/okx/proof-of-reserves-v2.git"
keywords = ["crypto", "por", "plonky2"]
categories = ["por"]

[workspace.dependencies]
# plonky2 = { path = "plonky2/plonky2"}
# plonky2_field = { path = "plonky2/field"}
# serde = "1.0.204"
serde_json = "1.0.120"
rand = { version = "0.8.4" }
config = "0.13.2"
ahash = { version = "0.8.7", default-features = false, features = ["compile-time-rng"] } # NOTE: Be sure to keep this version the same as the dependency in `hashbrown`.
anyhow = { version = "1.0.40", default-features = false }
hashbrown = { version = "0.14.3", default-features = false, features = ["ahash", "serde"] } # NOTE: When upgrading, see `ahash` dependency.
itertools = { version = "0.11.0", default-features = false }
log = { version = "0.4.14", default-features = false }
num = { version = "0.4", default-features = false, features = ["rand"] }
once_cell = "1.14"
static_assertions = { version = "1.1.0", default-features = false }
unroll = { version = "0.1.5", default-features = false }
# zkp
plonky2 = { git = "https://github.com/okx/plonky2", rev = "86dabae997c3c177c2ec93c21876d02aa8d405a6" }
plonky2_field = { git = "https://github.com/okx/plonky2", rev = "86dabae997c3c177c2ec93c21876d02aa8d405a6" }
cryptography_cuda = { git = "ssh://git@github.com/okx/cryptography_cuda.git", rev = "a0f9925ad9c8aa94c34b36ae7bd4ae91ab93b2d8" }
# computing
rayon = "1.8"
# data
serde = "1.0.204"
leveldb = "0.8.6"
# misc
thiserror = "1.0"
tracing = "0.1"
opentelemetry = { version = "0.17", features = ["serialize"]}
num_cpus = "1.15"
indicatif = "0.17.8"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4"
db-key = "=0.0.5"
tempdir = "0.3.7"
mockall = "0.13.0"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "off"
panic = "unwind"
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
panic = "abort"
overflow-checks = false
lto = true
