[package]
name = "zk-por-db"
description = "zk por db"
version = {workspace=true}

readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
leveldb.workspace=true
thiserror.workspace = true
serde_json.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
rand.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-flame = "0.2"
tracing-opentelemetry = "0.17"
tempdir = "0.3.7"
db-key = "=0.0.5"



