[package]
name = "zk-por-tracing"
description = "zk por tracing"
version = {workspace=true}

readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-flame = "0.2"
tracing-opentelemetry = "0.17"



